package final_exam.cf1;

public interface RemoteControlState {
    void onPower(RemoteControl remoteControl);
}
